--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,27 @@ html, body {
   padding: 0
 }
 
+body {
+  /* display: flex; */
+  /* min-height: 100vh; */
+  /* flex-direction: column; */
+}
+
+
 header {
   width: 100%;
-  margin: 0;
+  /* margin: 0; */
+  /* color: #78909c; */
   text-align: center;
 }
 
-header .container .row {
-  padding: 0;
+header .container .row .col {
+  /* padding: .25em 0 0; */
+}
+
+header .container {
+  /* padding: .25em 0 0; */
+  /* margin: 0 1em; */
 }
 
 header div p, footer div p {
@@ -19,51 +32,63 @@ header div p, footer div p {
 }
 
 .game_info {
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .game_controls {
-  padding: .25em;
-  /* font-size: 1em; */
+  /* padding: .5em; */
+  font-size: .8em;
 }
 
 .player_1 {
   font-weight: 800;
+  padding-top: .25em;
 }
 
-.left {
+.leftSide {
 
 }
 
 .player_2 {
   font-weight: 800;
+  padding-top: .25em;
 }
 
-.right {
+.rightSide {
 
+}
+
+.container .row {
+  margin: 0;
 }
 
 div .row {
-  border: 1px solid;
-  padding: .4em 0 0;
+  /* border: 1px solid; */
+  /* padding: .4em 0 0; */
   margin: 0;
   width: 100%;
 }
 
-canvas {
-  background-color: lightgreen;
+main {
+  /* flex: 1 0 auto; */
+}
 
+.canvas {
+  background-color: lightgreen;
+  /* max-width: 1280px; */
+  /* width: 100%; */
 }
 
 footer .page-footer {
-  /* width: 100%;
-  margin: 0 auto; */
+  /* width: 100%; */
+  /* margin-top: 0; */
 }
 
 footer .container {
+  /* color: #78909c */
   /* border: 1px solid; */
-  /* text-align: right; */
-  /* margin: 0; */
+  text-align: left;
+  margin: 0;
   /* padding: 0 0 1em; */
 }
 
