--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,12 @@
 html, body {
   margin: 0;
-  padding: 0
+  padding: 0;
 }
-
-body {
-  /* display: flex; */
-  /* min-height: 100vh; */
-  /* flex-direction: column; */
-}
-
 
 header {
   width: 100%;
-  /* margin: 0; */
-  /* color: #78909c; */
   text-align: center;
-}
-
-header .container .row .col {
-  /* padding: .25em 0 0; */
-}
-
-header .container {
-  /* padding: .25em 0 0; */
-  /* margin: 0 1em; */
+  font-family: 'Monoton', cursive;
 }
 
 header div p, footer div p {
@@ -31,19 +14,31 @@ header div p, footer div p {
   margin: 0 auto;
 }
 
+.logo {
+  margin: 0;
+  padding-top: .25em;
+  font-size: 1.5em;
+}
+
 .game_info {
-  /* border: 1px solid; */
+  padding: .02em;
 }
 
 .game_controls {
   margin: .2em 0;
-  font-size: .8em;
+  /* font-size: .9em; */
 }
 
 .player_ {
-  font-weight: 800;
+  margin: 0;
   padding-top: .25em;
   text-align: left;
+  font-size: 1.1em;
+}
+
+.player_ ul, .player_ li{
+  font-size: .8em;
+  padding: 0;
 }
 
 .container .row {
@@ -51,40 +46,15 @@ header div p, footer div p {
 }
 
 div .row {
-  /* border: 1px solid; */
-  /* padding: .4em 0 0; */
   margin: 0;
   width: 100%;
 }
 
-button {
-  margin: .5em;
-}
-
-main {
-  /* flex: 1 0 auto; */
-}
-
 .canvas {
   background-color: lightgreen;
-  /* max-width: 1280px; */
-  /* width: 100%; */
-}
-
-footer .page-footer {
-  /* width: 100%; */
-  /* margin-top: 0; */
 }
 
 footer .container {
-  /* color: #78909c */
-  /* border: 1px solid; */
   text-align: left;
   margin: 0;
-  /* padding: 0 0 1em; */
-}
-
-.about {
-  font-weight: 800;
-  font-size: 1.5em;
 }
