--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ header div p, footer div p {
 
 .game_controls {
   margin: .2em 0;
-  /* font-size: .9em; */
 }
 
 .player_ {
@@ -47,7 +46,7 @@ header div p, footer div p {
 
 div .row {
   margin: 0;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .canvas {
